Add Simple Calculator Android project

--- a/programming.html
+++ b/programming.html
@@ -8,15 +8,15 @@
 	<title>Development Portfolio</title>
 </head>
 <body>
-	<main>
-		<header class="header-footer-theme">
-			<nav class="doc-text">
-				<div><a class="nav-link button" href="./index.html">Top</a></div>
-				<div><a class="nav-link button" href="./programming.html">Development</a></div>
-				<div><a class="nav-link button" href="./gallery.html">Photography</a></div>
-				<div><a class="nav-link button" href="./contact.html">Contact</a></div>
-			</nav>
-		</header>
+	<header class="header-footer-theme">
+		<nav class="doc-text">
+			<div><a class="nav-link button" href="./index.html">Top</a></div>
+			<div><a class="nav-link button" href="./programming.html">Development</a></div>
+			<div><a class="nav-link button" href="./gallery.html">Photography</a></div>
+			<div><a class="nav-link button" href="./contact.html">Contact</a></div>
+		</nav>
+	</header>
+	<main>		
 		<h1 class="doc-text">Development Portfolio</h1>
 		<section>
 			<h2 class="doc-text">C++</h2>
@@ -48,7 +48,19 @@
 				</tr>
 			</table>
 		</section>
-		<section></section>
+		<section>
+			<h2 class="doc-text">Java</h2>
+			<table class="doc-text">
+				<tr>
+					<th>Project</th>
+					<th>Description</th>
+				</tr>
+				<tr>
+					<td><a href="https://github.com/solo-nko/Simple_Calculator">Simple Calculator</a></td>
+					<td>A basic Android app written in Java on Android Studio.</td>
+				</tr>
+			</table>
+		</section>
 		<footer class="header-footer-theme">
 			<span id="dark-mode" class="doc-text button">Dark Mode</span>
 			<span id="light-mode" class="doc-text button">Light Mode</span>
