Add JavaScript project Pixel Canvas

--- a/programming.html
+++ b/programming.html
@@ -18,7 +18,7 @@
 	</header>
 	<main>		
 		<h1 class="doc-text">Development Portfolio</h1>
-		<section>
+		<section> <!--C++-->
 			<h2 class="doc-text">C++</h2>
 			<table class="doc-text">
 				<tr>
@@ -31,7 +31,7 @@
 				</tr>
 			</table>
 		</section>
-		<section>
+		<section> <!--JavaScript-->
 			<h2 class="doc-text">JavaScript</h2>
 			<table class="doc-text">
 				<tr>
@@ -46,9 +46,13 @@
 					<td><a href="https://github.com/solo-nko/mixedMessages">Mixed Messages</a></td>
 					<td>Generates random but grammatically correct sentences in English by respecting article usage.</td>
 				</tr>
+				<tr>
+					<td><a href="https://github.com/solo-nko/pixelsketch">Pixel Canvas</a></td>
+					<td>A drawing tool written in TypeScript.</td>
+				</tr>
 			</table>
 		</section>
-		<section>
+		<section> <!--Java-->
 			<h2 class="doc-text">Java</h2>
 			<table class="doc-text">
 				<tr>
